--- a/BLAZAM/Pages/OU/CreateOU.razor
+++ b/BLAZAM/Pages/OU/CreateOU.razor
@@ -12,9 +12,9 @@
 
                         <OUTreeView Label="Parent Organizational Unit"
                                     SelectedOUChanged="OUSelected">
-                            <NodeContent>
+                           @* <NodeContent>
                                 @context.Name
-                            </NodeContent>
+                            </NodeContent>*@
                         </OUTreeView>
 
                     
