--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -87,9 +87,9 @@
                 </TabContent>
                 <ChildContent>
                         <OUTreeView SelectedOUChanged="OUSelected">
-                            <NodeContent>
+                           @* <NodeContent>
                                 @context.Name
-                            </NodeContent>
+                            </NodeContent>*@
                         </OUTreeView>
                         
 
