--- a/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
@@ -5,9 +5,9 @@
             <MudText>Choose OU</MudText>
         
             <OUTreeView @bind-StartingSelectedOU=@StartingOU @bind-SelectedOU=@SelectedOU>
-                <NodeContent>
+             @*   <NodeContent>
                     @context.Name
-                </NodeContent>
+                </NodeContent>*@
             </OUTreeView>
         
     
