--- a/BLAZAM/Shared/UI/Settings/ValidatedForm.razor
+++ b/BLAZAM/Shared/UI/Settings/ValidatedForm.razor
@@ -3,7 +3,7 @@
 
 
 @code {
-    protected bool saveDisabled = true;
+    protected bool saveDisabled = false;
 
 
     //protected virtual Task OnValidation(ValidationsStatusChangedEventArgs eventArgs)
