--- a/BLAZAM/wwwroot/css/site.css
+++ b/BLAZAM/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -77,40 +78,50 @@ a, .btn-link {
     min-width:25%;
 }
 
-    .autocomplete .options {
-        position: absolute;
-        top: 2rem;
-        left: 0;
-        background: white;
-        width: 100%;
-        padding: 0;
-        z-index: 10;
-        border: 1px solid #ced4da;
-        border-radius: 0.5rem;
-        box-shadow: 0 30px 25px 8px rgba(0, 0, 0, 0.1);
-    }
+.autocomplete .options {
+    position: absolute;
+    top: 2rem;
+    left: 0;
+    background: white;
+    width: 100%;
+    padding: 0;
+    z-index: 10;
+    border: 1px solid #ced4da;
+    border-radius: 0.5rem;
+    box-shadow: 0 30px 25px 8px rgba(0, 0, 0, 0.1);
+}
 
-    .autocomplete .option {
-        display: block;
-        padding: 0.25rem;
-        cursor:pointer;
-    }
+.autocomplete .option {
+    display: block;
+    padding: 0.25rem;
+    cursor:pointer;
+}
 
-        .autocomplete .option .option-text {
-            padding: 0.25rem 0.5rem;
-        }
+.autocomplete .option .option-text {
+    padding: 0.25rem 0.5rem;
+}
 
-        .autocomplete .option:hover {
-            background: #1E90FF;
-            color: #fff;
-        }
+.autocomplete .option:hover {
+    background: #1E90FF;
+    color: #fff;
+}
 
-        .autocomplete .option.disabled {
-            background-color: lightgrey;
-            cursor: not-allowed;
-        }
+.autocomplete .option.disabled {
+    background-color: lightgrey;
+    cursor: not-allowed;
+}
 
-            .autocomplete .option.disabled:hover {
-                background: lightgrey;
-                color: var(--bs-body);
-            }
+.autocomplete .option.disabled:hover {
+    background: lightgrey;
+    color: var(--bs-body);
+}
+.align-middle{
+    height:min-content;
+    margin-top:auto !important;
+    margin-bottom:auto !important;
+}
+
+.align-bottom {
+    height: min-content;
+    margin-top: auto !important;
+}
