--- a/BLAZAM/Shared/Navs/NavMenu.razor
+++ b/BLAZAM/Shared/Navs/NavMenu.razor
@@ -18,37 +18,41 @@
 
 
 
-<MudPaper Width="240px" Elevation="0" Class="py-3 mud-theme-dark">
-        <MudNavMenu Color="Color.Success" Bordered="true">
-            @DatabaseCache.ApplicationSettings?.AppAbbreviation
-            <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">@AppLocalization["Home"]</MudNavLink>
-            <AuthorizeView Context="createContext" Roles=@createRole>
-                <MudNavGroup Icon="@Icons.Material.Filled.Create" Title="@AppLocalization["Create"]" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
-                    <MudNavLink Href="/users/create">@AppLocalization["Create User"]</MudNavLink>
-                    <MudNavLink Href="/groups/create">@AppLocalization["Create Group"]</MudNavLink>
-                    <MudNavLink Href="/ou/create">@AppLocalization["Create OU"]</MudNavLink>
-                </MudNavGroup>
-            </AuthorizeView>
-            <AuthorizeView Roles=@UserRoles.SuperAdmin>
-                <MudNavLink Href="/recyclebin" Icon="@Icons.Material.Filled.DeleteOutline">@AppLocalization["Recycle Bin"]</MudNavLink>
-                <MudNavGroup Title="@AppLocalization["Configure"]" Icon="@Icons.Material.Filled.Handyman" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
-                    <MudNavLink Href="/settings">@AppLocalization["Settings"]</MudNavLink>
-                    <MudNavLink Href="/permissions">@AppLocalization["Permissions"]</MudNavLink>
-                    <MudNavLink Href="/templates">@AppLocalization["Templates"]</MudNavLink>
-                    <MudNavLink Href="/audit">@AppLocalization["Audit"]</MudNavLink>
-                </MudNavGroup>
-            </AuthorizeView>
-           
-         
+<MudPaper Width="180px" Elevation="0" Class="py-3 mud-theme-dark">
+    <MudNavMenu Color="Color.Success" Bordered="true">
+        <MudStack Row>
+            <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
+            <MudText Align="Align.Center" Class="align-middle"> @DatabaseCache.ApplicationSettings?.AppAbbreviation</MudText>
 
-        </MudNavMenu>
-    </MudPaper>
+        </MudStack>
+        <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">@AppLocalization["Home"]</MudNavLink>
+        <AuthorizeView Context="createContext" Roles=@createRole>
+            <MudNavGroup Icon="@Icons.Material.Filled.Create" Title="@AppLocalization["Create"]" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
+                <MudNavLink Href="/users/create">@AppLocalization["Create User"]</MudNavLink>
+                <MudNavLink Href="/groups/create">@AppLocalization["Create Group"]</MudNavLink>
+                <MudNavLink Href="/ou/create">@AppLocalization["Create OU"]</MudNavLink>
+            </MudNavGroup>
+        </AuthorizeView>
+        <AuthorizeView Roles=@UserRoles.SuperAdmin>
+            <MudNavLink Href="/recyclebin" Icon="@Icons.Material.Filled.DeleteOutline">@AppLocalization["Recycle Bin"]</MudNavLink>
+            <MudNavGroup Title="@AppLocalization["Configure"]" Icon="@Icons.Material.Filled.Handyman" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
+                <MudNavLink Href="/settings">@AppLocalization["Settings"]</MudNavLink>
+                <MudNavLink Href="/permissions">@AppLocalization["Permissions"]</MudNavLink>
+                <MudNavLink Href="/templates">@AppLocalization["Templates"]</MudNavLink>
+                <MudNavLink Href="/audit">@AppLocalization["Audit"]</MudNavLink>
+            </MudNavGroup>
+        </AuthorizeView>
 
 
-                  
 
-                      
-            <ScheduledUpdateAnnouncer />
+    </MudNavMenu>
+</MudPaper>
+
+
+
+
+
+<ScheduledUpdateAnnouncer />
 
 
 @code {
@@ -69,7 +73,7 @@
 
     }
 
- 
+
 
     private void ToggleNavMenu()
     {
