--- a/BLAZAM/Shared/UI/Inputs/MudSelectList.razor
+++ b/BLAZAM/Shared/UI/Inputs/MudSelectList.razor
@@ -2,27 +2,43 @@
 @typeparam T
 
 <MudSelect T="T"
-     Dense
-     Variant="@Variant"
-    Label="@Label"
-    HelperText="@HelperText"
-    HelperTextOnFocus=@HelperTextOnFocus 
-    Class=@Class  
-    ListClass="@ListClass"
-    
-    Style="@Style"> 
-        @foreach (var val in Values)
-        {
-            <MudSelectItem Value="@val">
-                <MudText Color="@Color">
-                @val
+    @bind-SelectedValues=@SelectedValues
+    @bind-Text=@Text
+    @bind-Value=@Value
+           Dense=@Dense
+           Variant="@Variant"
+           MultiSelection=@MultiSelection
+           MultiSelectionTextFunc="@MultiSelectionTextFunc"
+           Label="@Label"
+           HelperText="@HelperText"
+           HelperTextOnFocus=@HelperTextOnFocus
+           Placeholder="@Placeholder"
+           Class=@Class
+           ListClass="@ListClass"
+           Style="@Style">
+    @foreach (var val in Values)
+    {
+        <MudSelectItem Value="@val">
+            <MudText Color="@Color">
+                @if (ToStringFunc != null)
+                {
+                    <MudElement>
+                        @ToStringFunc.Invoke(val)
+                    </MudElement>
+                }
+                else
+                {
+                    <MudElement>
+                        @val.ToString()
+                    </MudElement>
+                }
             </MudText>
-                </MudSelectItem>
-        }
+        </MudSelectItem>
+    }
 </MudSelect>
 
 
-@code{
+@code {
     [Parameter]
     public Color Color { get; set; }
 }
