--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -8,32 +8,32 @@
     <MudForm @onsubmit=Save>
 
 
-        <SettingsField>
+        <SettingsField Label="@SettingsLocalization["Admin Password"]">
 
-            <MudTextField Label="@SettingsLocalization["Admin Password"]" InputType="InputType.Password" @bind-Value="newAdminPassword" />
+            <MudTextField InputType="InputType.Password" @bind-Value="newAdminPassword" />
         </SettingsField>
 
-        <SettingsField>
+        <SettingsField Label="@SettingsLocalization["Session Timeout"]">
 
-            <MudNumericField Label="@SettingsLocalization["Session Timeout"]" HelperText="Time in minute" TValue="int?" @bind-Value="@settings.SessionTimeout" />
+            <MudNumericField HelperText="Time in minute" TValue="int?" @bind-Value="@settings.SessionTimeout" />
 
         </SettingsField>
 
         <MudText>Duo Security MFA (optional)</MudText>
         <br />
-        <SettingsField>
+        <SettingsField Label="Duo ClientID">
 
-                <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId"/>
-
-        </SettingsField>
-        <SettingsField>
-
-                <MudTextField Label="Duo ClientSecret" InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret"/>
+                <MudTextField InputType="InputType.Password" @bind-Value="@settings.DuoClientId"/>
 
         </SettingsField>
-        <SettingsField>
+        <SettingsField Label="Duo ClientSecret">
 
-                <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost"/>
+                <MudTextField InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret"/>
+
+        </SettingsField>
+        <SettingsField Label="Duo ApiHost">
+
+                <MudTextField InputType="InputType.Password" @bind-Value="@settings.DuoApiHost"/>
 
         </SettingsField>
         <SettingsField>
