--- a/BLAZAM/Shared/UI/Settings/EmailSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/EmailSettings.razor
@@ -2,98 +2,92 @@
 
 
 
-<LoadingIndicator Height="Height.Is100" Visible=LoadingData>
 
-    <MudText Typo="Typo.h4">@SettingsLocalization["Email Settings"]</MudText>
-    <MudForm @onsubmit="Save">
+<MudText Typo="Typo.h4">@SettingsLocalization["Email Settings"]</MudText>
+<MudForm @onsubmit="Save">
 
-        <SettingsField>
+    <SettingsField Label="@SettingsLocalization["Email Enabled"]">
+        <MudSwitch @bind-Checked="settings.Enabled" />
+    </SettingsField>
 
-            <MudSwitch Label="@SettingsLocalization["Email Enabled"]" @bind-Checked="settings.Enabled" />
 
+    <SettingsField Label="@SettingsLocalization["Admin bcc"]">
+        <MudTextField HelperText="Addresses to blind copy all application emails that are sent." @bind-Value="settings.AdminBcc" />
+    </SettingsField>
+
+    <SettingsField Label="@SettingsLocalization["SMTP Server"]">
+        <MudTextField @bind-Value="settings.SMTPServer" />
+    </SettingsField>
+
+    <SettingsField Label="@SettingsLocalization["SMTP Port"]">
+
+
+        <MudNumericField T="int" HideSpinButtons="true" @bind-Value="settings.SMTPPort" />
+
+    </SettingsField>
+
+    <SettingsField Label="@SettingsLocalization["Use TLS"]">
+
+        <MudSwitch @bind-Checked="settings.UseTLS" />
+
+    </SettingsField>
+
+    <SettingsField Label="@SettingsLocalization["Use SMTP Authentication"]">
+
+        <MudSwitch @bind-Checked="settings.UseSMTPAuth" />
+
+    </SettingsField>
+
+    @if (settings.UseSMTPAuth)
+    {
+        <SettingsField Label="@SettingsLocalization["SMTP Username"]">
+
+            <MudTextField @bind-Value="settings.SMTPUsername" />
         </SettingsField>
 
+        <SettingsField Label="@SettingsLocalization["SMTP Password"]">
 
-        <SettingsField>
 
-
-            <MudTextField Label="@SettingsLocalization["Admin bcc"]"
-                          HelperText="Addresses to blind copy all application emails that are sent." @bind-Value="settings.AdminBcc"/>
+            <MudTextField @bind-Value="settings.SMTPPassword" />
 
         </SettingsField>
-
-        <SettingsField>
-
-
-            <MudTextField Label="@SettingsLocalization["SMTP Server"]" @bind-Value="settings.SMTPServer"/>
-
-        </SettingsField>
-        <SettingsField>
+    }
+    <SettingsField Label="@SettingsLocalization["From Address"]">
 
 
-            <MudNumericField T="int" Label="@SettingsLocalization["SMTP Port"]" HideSpinButtons="true" @bind-Value="settings.SMTPPort" />
-
-        </SettingsField>
-        <SettingsField>
-
-            <MudSwitch Label="@SettingsLocalization["Use TLS"]" @bind-Checked="settings.UseTLS" />
-
-        </SettingsField>
-
-        <SettingsField>
-
-            <MudSwitch Label="@SettingsLocalization["Use SMTP Authentication"]" @bind-Checked="settings.UseSMTPAuth" />
-
-        </SettingsField>
-
-        @if (settings.UseSMTPAuth)
-        {
-            <SettingsField>
-
-                <MudTextField Label="@SettingsLocalization["SMTP Username"]" @bind-Value="settings.SMTPUsername"/>
-            </SettingsField>
-            <SettingsField>
+        <MudTextField @bind-Value="settings.FromAddress" />
+    </SettingsField>
+    <SettingsField Label="@SettingsLocalization["From Display Name"]">
 
 
-                <MudTextField Label="@SettingsLocalization["SMTP Password"]" @bind-Value="settings.SMTPPassword"/>
+        <MudTextField @bind-Value="settings.FromName" />
 
-            </SettingsField>
-        }
-        <SettingsField>
+    </SettingsField>
 
-
-            <MudTextField Label="@SettingsLocalization["From Address"]" @bind-Value="settings.FromAddress"/>
-        </SettingsField>
-        <SettingsField>
+    <SettingsField Label="@SettingsLocalization["Reply-To Address"]">
 
 
-            <MudTextField Label="@SettingsLocalization["From Display Name"]" @bind-Value="settings.FromName"/>
+        <MudTextField @bind-Value="settings.ReplyToAddress" />
 
-        </SettingsField>
-        <SettingsField>
+    </SettingsField>
 
-
-            <MudTextField Label="@SettingsLocalization["Reply-To Address"]" @bind-Value="settings.ReplyToAddress"/>
-
-        </SettingsField>
-        <SettingsField>
+    <SettingsField Label="@SettingsLocalization["Reply-To Display Name"]">
 
 
-            <MudTextField Label="@SettingsLocalization["Reply-To Display Name"]" @bind-Value="settings.ReplyToName"/>
+        <MudTextField @bind-Value="settings.ReplyToName" />
 
-        </SettingsField>
+    </SettingsField>
 
-        <MudTextField Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
-        
-        <MudButton Disabled=@(!settings.Enabled && !settings.Valid()) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
+    <MudTextField Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
 
-        <SettingsField>
+    <MudButton Disabled=@(!settings.Enabled && !settings.Valid()) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
 
-            <MudButton Disabled="saveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+    <SettingsField>
 
-        </SettingsField>
-    </MudForm>
-</LoadingIndicator>
+        <MudButton Disabled="saveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+    </SettingsField>
+</MudForm>
 @code {
 #nullable disable warnings
     BLAZAM.Common.Models.Database.EmailSettings settings = new BLAZAM.Common.Models.Database.EmailSettings();
